# Glitch-Bunny

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/inc/GlitchBunny/: KnobComponent.h  PluginEditor.h
plugin/src/: KnobComponent.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/src/: AudioProcessorTest.cpp
